--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="flex justify-between items-center">
                 <h1 class="text-xl sm:text-2xl font-bold text-golden-600">
                     <a href="#" class="hover:text-yellow-700 transition-colors">
-  <img src="dn crafts.png" alt="DN Crafts Logo" style="height: 60px;" >
+  <img src="dncrafts_design1-removebg-preview.png" alt="DN Crafts Logo" style="height: 60px;" >
 </a>
                 </h1>
                 
@@ -291,8 +291,8 @@
                 <input type="range" id="filter-price-min" min="0" max="500" value="0" class="w-full" />
                 <input type="range" id="filter-price-max" min="0" max="500" value="500" class="w-full" />
                 <div class="flex justify-between text-sm text-gray-600">
-                    <span>$0</span>
-                    <span>$500</span>
+                    <span>0pkr</span>
+                    <span>500pkr</span>
                 </div>
             </div>
         </div>
@@ -367,10 +367,10 @@
         <div class="relative bg-gradient-to-br from-yellow-50 to-indigo-100 py-12 sm:py-16 md:py-24 lg:py-32 rounded-2xl sm:rounded-3xl mx-3 sm:mx-4 my-4 sm:my-6 md:my-8 md:mx-auto md:max-w-7xl overflow-hidden">
             <div class="container mx-auto px-4 sm:px-6 text-center z-10 relative">
                 <h2 class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl font-extrabold text-gray-900 leading-tight mb-3 sm:mb-4 lg:mb-6">
-                    Discover Your Style
+                    DN Crafts
                 </h2>
                 <p class="text-sm sm:text-base md:text-lg lg:text-xl text-gray-600 max-w-xs sm:max-w-lg md:max-w-2xl mx-auto mb-6 sm:mb-8 px-2">
-                    Explore our curated collection of modern and timeless pieces that define your unique style.
+                    The perfect gift, for the moments that matter.
                 </p>
                 <button class="bg-yellow-600 text-white px-6 sm:px-8 py-3 sm:py-4 rounded-full text-sm sm:text-base lg:text-lg font-semibold hover:bg-yellow-700 transition-all duration-300 inline-flex items-center transform hover:scale-105">
                     Shop Now
@@ -400,13 +400,7 @@
         <button onclick="sortProducts('price-high')" data-sort="price-high" class="sort-button px-3 py-1 rounded-full text-xs font-medium bg-gray-100 text-gray-700">Price: High to Low</button>
         <button onclick="sortProducts('name')" data-sort="name" class="sort-button px-3 py-1 rounded-full text-xs font-medium bg-gray-100 text-gray-700">Name</button>
     </div>
-    <div class="flex items-center space-x-2">
-        <span class="text-sm text-gray-600">Price:</span>
-        <input type="range" id="price-min" min="0" max="500" value="0" class="w-16" />
-        <span class="text-xs">to</span>
-        <input type="range" id="price-max" min="0" max="500" value="500" class="w-16" />
-        <span id="price-display" class="text-xs text-gray-600">$0 - $500</span>
-    </div>
+    
 </div>
             <!-- Products Grid -->
             <div id="products-grid" class="grid grid-cols-1 xs:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-3 sm:gap-4 md:gap-6 lg:gap-8">
@@ -430,7 +424,7 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 sm:gap-8 mb-6 sm:mb-8">
                 <div class="text-center sm:text-left">
                     <h3 class="text-lg sm:text-xl font-bold text-white mb-3 sm:mb-4">DN Crafts</h3>
-                    <p class="text-sm">Your destination for quality products and exceptional style.</p>
+                    <p class="text-sm">The perfect gift, for the moments that matter.</p>
                 </div>
                 <div class="text-center sm:text-left">
                     <h4 class="font-semibold text-white mb-3">Quick Links</h4>
@@ -453,7 +447,7 @@
                     <div class="space-y-2 text-sm">
                         <p>📱 WhatsApp: +92 302 1943684</p>
                         <p>📧 infodncrafts@gmail.com</p>
-                        <p>🏢 123 Style Street, Fashion City</p>
+                        <p>🏢 Lakhodair, lahore, Pakistan</p>
                     </div>
                 </div>
             </div>
@@ -509,7 +503,7 @@
             <div id="cart-footer" class="border-t p-4 sm:p-6 flex-shrink-0 bg-white hidden">
                 <div class="flex justify-between items-center mb-4">
                     <span class="text-lg font-semibold">Total:</span>
-                    <span id="cart-total" class="text-xl font-bold text-yellow-600">$0.00</span>
+                    <span id="cart-total" class="text-xl font-bold text-yellow-600">0.0pkr</span>
                 </div>
                 <button
                     id="checkout-btn"
@@ -594,7 +588,7 @@
                         <div class="border-t pt-3 mt-3">
                             <div class="flex justify-between items-center font-bold text-base sm:text-lg">
                                 <span>Total:</span>
-                                <span id="checkout-total" class="text-yellow-600">$0.00</span>
+                                <span id="checkout-total" class="text-yellow-600">0.0pkr</span>
                             </div>
                         </div>
                     </div>
