--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DN Crafts - Discover Your Style</title>
+    <title>DN Crafts - The perfect Gift</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
