--- a/index.html
+++ b/index.html
@@ -577,9 +577,14 @@
                 <div class="text-center sm:text-left">
                     <h4 class="font-semibold text-white mb-3">Categories</h4>
                     <div class="space-y-2 text-sm">
-                        <a href="#" class="block hover:text-white transition-colors">Apparel</a>
-                        <a href="#" class="block hover:text-white transition-colors">Electronics</a>
-                        <a href="#" class="block hover:text-white transition-colors">Home Goods</a>
+                        <a href="#" class="block hover:text-white transition-colors">Acrylic Products</a>
+                        <a href="#" class="block hover:text-white transition-colors">Invitation Cards</a>
+                        <a href="#" class="block hover:text-white transition-colors">Personalized Nikkah Namas</a>
+                        <a href="#" class="block hover:text-white transition-colors">Customized Bride Dupata</a>
+                        <a href="#" class="block hover:text-white transition-colors">Tabarak Boxes</a>
+                        <a href="#" class="block hover:text-white transition-colors">Occasion Gifts</a>
+                        <a href="#" class="block hover:text-white transition-colors">Flower Bouquets</a>
+                        <a href="#" class="block hover:text-white transition-colors">FGift Baskets</a>
                     </div>
                 </div>
                 <div class="text-center sm:text-left">
