--- a/index.html
+++ b/index.html
@@ -563,7 +563,9 @@
         <div class="container mx-auto px-4 sm:px-6">
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 sm:gap-8 mb-6 sm:mb-8">
                 <div class="text-center sm:text-left">
-                    <h3 class="text-lg sm:text-xl font-bold text-white mb-3 sm:mb-4">DN Crafts</h3>
+                    <a href="#" class="hover:text-yellow-700 transition-colors">
+                        <img src="dncrafts_design1-removebg-preview.png" alt="DN Crafts Logo" style="height: 130px;">
+                    </a>
                     <p class="text-sm">The perfect gift, for the moments that matter.</p>
                 </div>
                 <div class="text-center sm:text-left">
@@ -598,6 +600,7 @@
             </div>
             <div class="text-center pt-6 sm:pt-8 border-t border-gray-800">
                 <p class="text-sm">&copy; 2025 DN Crafts. All rights reserved.</p>
+               <a href="https://dev-codee.github.io/" class="block hover:text-white transition-colors" target="_blank" rel="noopener noreferrer">Designed by Faizan Ahmad</a>
             </div>
         </div>
         <div class="text-center sm:text-left">
