--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
                         <a href="#" class="block hover:text-white transition-colors">Tabarak Boxes</a>
                         <a href="#" class="block hover:text-white transition-colors">Occasion Gifts</a>
                         <a href="#" class="block hover:text-white transition-colors">Flower Bouquets</a>
-                        <a href="#" class="block hover:text-white transition-colors">FGift Baskets</a>
+                        <a href="#" class="block hover:text-white transition-colors">Gift Baskets</a>
                     </div>
                 </div>
                 <div class="text-center sm:text-left" id="contact-info">
@@ -622,6 +622,13 @@
                                 <i class="fab fa-tiktok"></i>
                             </div>
                         </a>
+                    </div>
+                     <h4 class="font-semibold text-white mb-3">Payment Info</h4>
+                    <div class="space-y-2 text-sm">
+                        <p>📱 Jazz Cash/Easy Paisa: +92 302 1943684</p>
+                        <p>🏢 Bank Transfer 55735002014434</p>
+                        <p>🏢 Account Title: Syed Danish Ali</p>
+                        <p>🏢 Bank Name : Bank Alfalah</p>
                     </div>
                 </div>
             </div>
